# Nokia-Nostalgia

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts  verify_config.py
.github/workflows/: ci-cd.yml
backend/: Dockerfile  Makefile  README.md  inspect_db.py  pyproject.toml
backend/src/: config.py  database.py  db.py  main.py  models.py  tables.py
backend/src/routers/: auth.py  leaderboard.py  spectate.py
backend/tests/: conftest.py  test_api.py  test_auth_flow.py  test_db_flow.py
backend/tests_integration/: conftest.py  test_auth_integration.py  test_leaderboard_integration.py  test_spectate_integration.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Index.tsx  Spectate.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: game.ts
src/: App.tsx  index.css
src/components/auth/: LoginForm.tsx  SignupForm.tsx
src/components/game/: GameControls.tsx  SnakeCanvas.tsx
src/components/layout/: Header.tsx
src/components/leaderboard/: LeaderboardTable.tsx
src/components/spectate/: SpectatorView.tsx
src/hooks/: useSnakeGame.ts
src/hooks/__tests__/: useAuth.test.ts  useSnakeGame.test.ts
src/lib/: gameLogic.ts  validation.ts
src/pages/: Auth.tsx  Index.tsx  Leaderboard.tsx  Spectate.tsx
src/services/: api.ts
src/test/: setup.ts
(+12 files in other folders)
